Fix tags separating commas not visible in dark mode
Fixes https://forums.zotero.org/discussion/118776/tag-separation-in-dark-mode

--- a/src/common/stylesheets/components/_preview.scss
+++ b/src/common/stylesheets/components/_preview.scss
@@ -125,7 +125,7 @@
 		.tag {
 			&::after {
 				content: ", ";
-				color: #000; /* replaced $text-color */
+				color: var(--fill-primary);
 			}
 
 			&:last-child {
